--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Password generator</title>
   </head>
   <body>
-    <h1 id="password"></h1>
+    <h1>Password:</h1>
+    <p id="password"></p>
 
 
     <script src="js/script.js" charset="utf-8"></script>
